--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng buid --prod",
+    "heroku-postbuild": "ng build --prod",
     "engines": { "node": "12.13.0", "npm": "6.12.0" }
   },
   "private": true,
